--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <input class="color1" type="color" name="color1" value="#00ff00">
     <input class="color2" type="color" name="color2" value="#ff0000">
     <input class="color3" type="color" name="color3" value="#0000ff">
-    <h2>Current CSS Background</h2>
+    <h2>This is the current CSS Background</h2>
     <button class="random-button btn btn-primary">Random background!</button><br><br>
     <h3></h3>
     <script type="text/javascript" src="script.js"></script>
